--- a/cuda-projects/Makefile
+++ b/cuda-projects/Makefile
@@ -1,17 +1,18 @@
 .PHONY: build run push
 
+dir_name := $(shell basename $(CURDIR) | tr 'A-Z' 'a-z')
+
+all:
+	@echo ${dir_name}
 
 build:
-	export dir_name=${PWD##*/}
-	docker buildx build --load --platform linux/amd64 -t ${dir_name} .
+	docker buildx build --pull=false --load --platform linux/amd64 -t ${dir_name} .
 	# docker buildx create --use
 	# docker buildx build --platform linux/amd64,linux/arm64 -t cuda-sandbox:latest .
 
 run:
-	export dir_name=${PWD##*/}
 	docker run -it ${dir_name}
 
 push:
-	export dir_name=${PWD##*/}
 	docker save "${dir_name}:latest" | gzip > "${dir_name}-image.tar.gz"
 	scp ${dir_name}-image.tar.gz gpu-sandbox-git:~
